# llm-externalizer-plugin

./: .gitignore  .mcp.json  .yamllint.yml  CHANGELOG.md  LICENSE  README.md  cliff.toml  pyproject.toml
.claude-plugin/: plugin.json
.githooks/: pre-push
.serena/: project.yml
agents/: llm-ext-fixer.md  llm-ext-reviewer.md  llm-externalizer-bug-fixer-agent.md  llm-externalizer-bug-fixer.md  llm-externalizer-fixer-agent.md  llm-externalizer-fixer.md  llm-externalizer-parallel-fixer-agent.md  llm-externalizer-parallel-fixer-opus-agent.md  llm-externalizer-parallel-fixer-sonnet-agent.md  llm-externalizer-reviewer-agent.md  llm-externalizer-reviewer.md  llm-externalizer-serial-fixer-agent.md  llm-externalizer-serial-fixer-opus-agent.md  llm-externalizer-serial-fixer-sonnet-agent.md
commands/: configure.md  discover.md  free-scan.md  llm-externalizer-benchmark.md  llm-externalizer-change-model.md  llm-externalizer-configure.md  llm-externalizer-discover.md  llm-externalizer-fix-found-bugs.md  llm-externalizer-fix-report.md  llm-externalizer-scan-and-fix-serially.md  llm-externalizer-scan-and-fix.md  llm-externalizer-search-existing-implementations.md  scan-and-fix.md  search-existing-implementations.md
mcp-server/: add-shebang.mjs  esbuild.config.mjs  eslint.config.mjs  package-lock.json  package.json  server.json  statusline.py  statusline.sh  tsconfig.json  vitest.config.ts
rules/: use-llm-externalizer.md
scripts/: apply_ensemble_choice.py  check_references.py  fix_found_bugs_helper.py  install-statusline.sh  install_statusline.py  join_fixer_reports.py  (+7 more)
(+40 files in other folders)
