[project]
name = "llm-externalizer-plugin"
version = "9.0.6"
description = "Claude Code plugin: offload bounded LLM tasks to cheaper local or remote models via MCP"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# E501 (line too long) excluded — 120 is plenty; some strings are intentionally long
ignore = ["E501"]
